    (cf. patch #195).

* docutils/parsers/recommonmark_wrapper.py

  - Improved mock Sphinx module.

* docutils/transforms/__init__.py

  - `Transformer.populate_from_components()` now silently ignores
    components that are not instances of `docutils.TransformSpec`.

* docutils/utils/__init__.py

  - New utility function `xml_declaration()`.
  - `utils.DependencyList.add()` accepts `pathlib.Path` instances.

* docutils/utils/math/latex2mathml.py

  - Support "mod" notation for modulo operation/modulus arithmetic.

* docutils/utils/math/tex2mathml_extern.py

  - Support `pandoc` as LaTeX to MathML converter. Patch by Ximin Luo.

* docutils/writers/_html_base.py

  - Refactoring of HTMLTranslator initialization and collecting of
    document "parts". Adapt HTML writers importing `_html_base`.

    Changes to the HTML output (no space character before closing tag of
    XML declaration, order of metadata elements)
    don't affect the HTML semantics, styling, and rendering.
    
  - Wrap definition lists with "details" class argument in a <div>    
    with the "id" and "class" values of the list node.

* docutils/writers/latex2e/__init__.py

  - Do not insert ``\usepackage[utf8]{inputenc}`` into UTF-8 encoded
    LaTeX sources. UTF-8 is the default encoding for LaTeX2e since 2018.

* docutils/writers/latex2e/titlepage.tex

  - Drop ``\usepackage{fixltx2e}`` from template. (Obsolete since 2015
    and dropped from other templates in Docutils 0.14.)

* docutils/writers/manpage.py

  - Do not output empty "manual" in ``.TH``

* setup.py

  - Fix SetuptoolsDeprecationWarning: ``Installing '' as data is deprecated``
    by adding data directories to package_data.packages list.

* tox.ini

  - Extracted flake8 configuration and moved to ``.flake8``.

* test/

  - Refactored tests to use common `unittest` idioms.
    Fixes errors when running the test suite with ``python -m unittest``
    or external test frameworks, such as Pytest_.
